@@ -3243,6 +3243,24 @@ The user is informed that a message has been sent to the email address and that 
 
 
 
+<p style="margin-top: 20px"><em>This is the template used for the administrator notification email upon user access to login form after user acceptation.</em></p>
+<!-- ###EMAIL_TEMPLATE_SETFIXED_ENTER_ADMIN### begin -->
+<!-- ###SUB_RECORD### -->###LABEL_V_REGISTRATION_ENTERED###
+###LABEL_V_NOTIFICATION###:
+
+###LABEL_V_REGISTRATION_ENTERED###
+
+###LABEL_NAME### ###FIELD_name###
+###LABEL_EMAIL### ###FIELD_email###
+###LABEL_USERNAME### ###FIELD_username###
+
+###LABEL_KIND_REGARDS###
+###SITE_NAME###
+<!-- ###SUB_RECORD### -->
+<!-- ###EMAIL_TEMPLATE_SETFIXED_ENTER_ADMIN### end-->
+
+
+
 <p style="margin-top: 20px"><em>This template is used to confirm to a person by email that he has cancelles his registration.</em></p>
 <!-- ###EMAIL_TEMPLATE_SETFIXED_DELETE_HTML### begin -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
