@@ -1,5 +1,6 @@
 2014-03-12 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Fix localization failure of error text in tx_srfeuserregister_setfixed
+	* Resolves #51953: Subpart ###EMAIL_TEMPLATE_SETFIXED_ENTER_ADMIN### missing in HTML template
 
 2014-03-11 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Resolves #56790: Remove dependency on extension div2007
